<resources>
    <string name="app_name">HomeFixers</string>
    <string name="todo">todo</string>
    <string name="home_fixers">Home Fixers</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="grid_layout">GRID LAYOUT</string>
    <string name="plumbing">Plumbing \n15/hour</string>
    <string name="cleaning">Cleaning \n25/hour</string>
    <string name="gardening">Gardening \n15/hour</string>
    <string name="select_service">SELECT SERVICE</string>
    <string name="electrician">Electrician \n 15/hour</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="button">Button</string>
    <string name="add_image">Add Image</string>
    <string name="con">Confirm Booking</string>
    <string name="your_booking_is_successful">Your Booking is Successful</string>
    <string name="our_agent_will_meet_at_the_work_locations_soon">Our agent will meet at the work location in one hour</string>
    <string name="logout">logout</string>
    <string name="show_bookings">Show bookings</string>
</resources>
